--- a/package.json
+++ b/package.json
@@ -5,24 +5,29 @@
   "author": "ioana.a.cojocariu@gmail.com",
   "licence": "closed",
   "devDependencies": {
-    "@types/core-js": "^0.9.28",
-    "@types/hammerjs": "^2.0.28",
-    "@types/jasmine": "^2.2.29",
+    "@angular/compiler-cli": "~2.4.1",
+    "@types/es6-shim": "^0.31.32",
+    "@types/hammerjs": "^2.0.33",
+    "@types/jasmine": "^2.2.34",
     "@types/node": "^6.0.38",
     "@types/protractor": "^1.5.16",
-    "@types/selenium-webdriver": "^2.44.26",
-    "@types/source-map": "^0.1.26",
+    "@types/selenium-webdriver": "2.53.38",
+    "@types/source-map": "^0.5.0",
     "@types/uglify-js": "^2.0.27",
-    "@types/webpack": "^1.12.29",
-    "angular2-template-loader": "^0.5.0",
-    "awesome-typescript-loader": "2.2.1",
-    "codelyzer": "~0.0.28",
-    "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.25.0",
+    "@types/underscore": "^1.7.36",
+    "@types/webpack": "^2.0.0",
+    "angular-router-loader": "^0.4.0",
+    "angular2-template-loader": "^0.6.0",
+    "assets-webpack-plugin": "^3.4.0",
+    "awesome-typescript-loader": "~3.0.0-beta.17",
+    "codelyzer": "~2.0.0-beta.4",
+    "copy-webpack-plugin": "^4.0.0",
+    "css-loader": "^0.26.0",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
+    "extract-text-webpack-plugin": "~2.0.0-beta.4",
     "file-loader": "^0.9.0",
-    "gh-pages": "^0.11.0",
+    "gh-pages": "^0.12.0",
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-concat": "^1.0.1",
@@ -33,57 +38,60 @@
     "grunt-usemin": "^3.1.1",
     "grunt-webpack": "^1.0.11",
     "html-webpack-plugin": "^2.21.0",
-    "imports-loader": "^0.6.5",
-    "istanbul-instrumenter-loader": "0.2.0",
+    "imports-loader": "^0.7.0",
+    "istanbul-instrumenter-loader": "1.2.0",
     "jasmine-core": "^2.5.2",
     "json-loader": "^0.5.4",
     "karma": "^1.2.0",
     "karma-chrome-launcher": "^2.0.0 ",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "1.0.0",
+    "karma-junit-reporter": "^1.1.0",
     "karma-mocha-reporter": "^2.0.0",
+    "karma-remap-coverage": "^0.1.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "1.8.0",
-    "parse5": "^1.3.2",
+    "karma-webpack": "1.8.1",
     "phantomjs-prebuilt": "^2.1.7",
-    "protractor": "^3.2.2",
-    "raw-loader": "0.5.1",
     "remap-istanbul": "^0.6.3",
-    "rimraf": "^2.5.2",
+    "ngc-webpack": "^1.0.2",
+    "npm-run-all": "^4.0.0",
+    "parse5": "^1.3.2",
+    "raw-loader": "0.5.1",
+    "rimraf": "~2.5.4",
+    "sass-loader": "^4.1.1",
+    "script-ext-html-webpack-plugin": "^1.3.2",
+    "set-blocking": "^2.0.0",
     "source-map-loader": "^0.1.5",
-    "string-replace-loader": "github:gdi2290/string-replace-loader",
+    "string-replace-loader": "1.0.5",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.4",
-    "ts-helpers": "1.1.1",
-    "ts-loader": "^0.9.1",
-    "ts-node": "^1.3.0",
-    "tslint": "3.15.1",
-    "tslint-loader": "^2.1.3",
-    "typedoc": "^0.4.5",
-    "typescript": "2.0.0",
+    "ts-helpers": "1.1.2",
+    "ts-node": "^2.0.0",
+    "tslint": "~4.2.0",
+    "typedoc": "^0.5.3",
+    "typescript": "2.0.10",
     "url-loader": "^0.5.7",
-    "webpack": "2.1.0-beta.21",
+    "v8-lazy-parse-webpack-plugin": "^0.3.0",
+    "webpack": "2.2.0-rc.3",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "2.1.0-beta.2",
+    "webpack-dev-server": "2.2.0-rc.0",
     "webpack-md5-hash": "^0.0.5",
-    "webpack-merge": "^0.14.1"
+    "webpack-merge": "^2.0.000"
   },
   "dependencies": {
-    "@angular/common": "^2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "^2.0.0",
-    "@angular/forms": "^2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/material": "^2.0.0-alpha.9-3",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/platform-server": "2.0.0",
-    "@angular/router": "3.0.0",
+    "@angular/common": "~2.4.1",
+    "@angular/compiler": "~2.4.1",
+    "@angular/core": "~2.4.1",
+    "@angular/forms": "~2.4.1",
+    "@angular/http": "~2.4.1",
+    "@angular/platform-browser": "~2.4.1",
+    "@angular/platform-browser-dynamic": "~2.4.1",
+    "@angular/platform-server": "~2.4.1",
+    "@angular/router": "~3.4.1",
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
-    "@angularclass/request-idle-callback": "^1.0.7",
-    "@angularclass/webpack-toolkit": "^1.3.3",
     "@types/d3": "^4.3.0",
     "@types/d3-selection": "^1.0.5",
     "angular-2-dropdown-multiselect": "^0.3.1",
@@ -94,15 +102,15 @@
     "forever": "^0.15.3",
     "ie-shim": "^0.1.0",
     "immutable": "^3.8.1",
+    "jasmine-core": "^2.5.2",
     "json-formatter-js": "^1.2.0",
     "ng2-material": "0.8.1",
     "ng2-select": "^1.1.2",
     "request": "^2.79.0",
-    "rxjs": "5.0.0-beta.12",
-    "sass-material-colors" : "0.0.5",
-    "typings": "^1.4.0",
+    "rxjs": "~5.0.2",
+    "sass-material-colors": "0.0.5",
     "underscore": "^1.8.3",
-    "zone.js": "~0.6.17"
+    "zone.js": "~0.7.4"
   },
   "scripts": {
     "build": "node node_modules/webpack/bin/webpack",
@@ -111,8 +119,8 @@
     "csswatch": "compass watch themes/",
     "start": "node node_modules/forever/bin/forever start server.js",
     "stop": "node node_modules/forever/bin/forever stop server.js",
-    "test": "node node_modules/forever/karma/bin/karma start --singleRun",
-    "testwatch": "node node_modules/forever/karma/bin/karma start --no-single-run --auto-watch"
-
+    "tslint": "node node_modules/tslint/bin/tslint -c tslint.json src/**/**.ts -e src/**/**.d.ts",
+    "test": "node node_modules/karma/bin/karma start --singleRun",
+    "testwatch": "node node_modules/karma/bin/karma start --no-single-run --auto-watch"
   }
 }
