--- a/package.json
+++ b/package.json
@@ -46,18 +46,18 @@
     "karma-chrome-launcher": "^2.0.0 ",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "1.0.0",
     "karma-junit-reporter": "^1.1.0",
     "karma-mocha-reporter": "^2.0.0",
+    "karma-phantomjs-launcher": "1.0.0",
     "karma-remap-coverage": "^0.1.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.8.1",
-    "phantomjs-prebuilt": "^2.1.7",
-    "remap-istanbul": "^0.6.3",
     "ngc-webpack": "^1.0.2",
     "npm-run-all": "^4.0.0",
     "parse5": "^1.3.2",
+    "phantomjs-prebuilt": "^2.1.7",
     "raw-loader": "0.5.1",
+    "remap-istanbul": "^0.6.3",
     "rimraf": "~2.5.4",
     "sass-loader": "^4.1.1",
     "script-ext-html-webpack-plugin": "^1.3.2",
@@ -115,6 +115,7 @@
   "scripts": {
     "build": "node node_modules/webpack/bin/webpack",
     "buildwatch": "node node_modules/webpack/bin/webpack -w",
+    "builddist": "node node_modules/grunt-cli/bin/grunt build",
     "css": "compass compile themes/",
     "csswatch": "compass watch themes/",
     "start": "node node_modules/forever/bin/forever start server.js",
