--- a/package.json
+++ b/package.json
@@ -104,8 +104,12 @@
     "immutable": "^3.8.1",
     "jasmine-core": "^2.5.2",
     "json-formatter-js": "^1.2.0",
+    "minimist": "^1.2.0",
+    "moment": "2.14.1",
     "ng2-material": "0.8.1",
     "ng2-select": "^1.1.2",
+    "ngx-charts": "3.0.2",
+    "reflect-metadata": "^0.1.9",
     "request": "^2.79.0",
     "rxjs": "~5.0.2",
     "sass-material-colors": "0.0.5",
